# doggy-notes

./: .gitignore  CHANGELOG.md  CHANGELOG.py  LICENSE  README.md  how-ref --tags  pyproject.toml
.github/ISSUE_TEMPLATE/: default-feature-request.md  default-is.md
.github/workflows/: python-publish.yml
src/doggy_notes/: _version.py  main.py
src/doggy_notes/application/: service.py
src/doggy_notes/application/dto/: query_result.py
src/doggy_notes/application/use_cases/: create_note.py  delete_notes.py  edit_note.py  list_notes.py  read_note.py  read_notes.py
src/doggy_notes/cli/: console.py  controller.py  dependencies.py  help_messages.py  main.py  presenters.py
src/doggy_notes/cli/commands/: add.py  create_app.py  delete.py  delete_app.py  edit.py  edit_app.py  info.py  info_app.py  list_app.py  list_func.py  list_notes.py  path_app.py  read.py  read_app.py
src/doggy_notes/cli/parsers/: id_parser.py  note_parser(Copy).py  note_parser.py  tag_parser.py
src/doggy_notes/domain/entities/: node.py  note.py
src/doggy_notes/domain/enums/: mode.py  note_field.py  sort_by.py  sort_direction.py
src/doggy_notes/domain/exceptions/: note_errors.py
src/doggy_notes/domain/repositories/: note_repository.py
src/doggy_notes/domain/services/: note_service.py
src/doggy_notes/infra/: paths.py  serializer.py  storage.py
src/doggy_notes/infra/database/: migrations.py  schema.py
src/doggy_notes/infra/logging.py/: logger.py
src/doggy_notes/infra/persistence/: note_presenter.py  sqlite_note_repository.py
src/doggy_notes/infra/persistence/mappers/: note_mapper.py
src/doggy_notes/json/: repository.py
src/doggy_notes/presentation/formatters/: date_formatter.py
src/doggy_notes/presentation/presenters/: error_presenter.py  file_presenter.py  note_presenter.py
src/my_notes/application/: service.py
src/my_notes/cli/: main.py  presenters.py
src/my_notes/core/: services.py
src/my_notes/domain/: note.py
src/my_notes/infra/: serializer.py  storage.py
src/my_notes/json/: repository.py
src/my_notes_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
