[build-system]
requires = ["setuptools>=68","wheel","setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "doggy-notes"
dynamic = ["version"]
description = "Secure, portable CLI note-taking app with filtering and rich formatting"
readme = "README.md"
requires-python = ">=3.10,<4"

authors = [
  {name = "Dev-ev-v", email = "guilhermepapuf.dev@proton.me"}
]

license = "Apache-2.0"

keywords = [
  "cli",                  
  "notes",              
  "productivity",         
  "diary",                 
  "reminders",          
  "text-editor",            
  "secure",                 
  "private",              
  "portable",               
  "filter",                
  "rich-output",            
]

classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",    
  "Environment :: Console",  
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",   
  "Topic :: Office/Business",
  "Topic :: Text Editors :: Word Processors",
  "Topic :: Office/Business :: News/Diary", 
  "Topic :: Utilities",
]

dependencies = [
  "typer>=0.12.3,<1.0",
  "platformdirs>=4.0.0"
]

[project.urls]
Homepage = "https://github.com/Dev-ev-v/doggy-notes"
Repository = "https://github.com/Dev-ev-v/doggy-notes"
Issues = "https://github.com/Dev-ev-v/doggy-notes/issues"
Documentation = "https://github.com/Dev-ev-v/doggy-notes#readme"
Changelog = "https://github.com/Dev-ev-v/doggy-notes/blob/main/CHANGELOG.md"

[project.scripts]
doggy = "doggy_notes.main:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools_scm]
version_file = "src/doggy_notes/_version.py"
version_scheme = "post-release"
local_scheme = "no-local-version"
fallback_version = "0.0.0.dev0"

[tool.setuptools.packages.find]
where = ["src"]